# serializer version: 1
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_05b_3e4_e44_05b3e4e44_atmospheric_pressure-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.tfa_me_05b_3e4_e44_05b3e4e44_atmospheric_pressure',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Atmospheric pressure',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.ATMOSPHERIC_PRESSURE: 'atmospheric_pressure'>,
    'original_icon': None,
    'original_name': 'Atmospheric pressure',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '05b3e4e44_05b3e4e44_barometric_pressure',
    'unit_of_measurement': 'hPa',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_05b_3e4_e44_05b3e4e44_atmospheric_pressure-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'atmospheric_pressure',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me 05B-3E4-E44 (05B3E4E44) Atmospheric pressure',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: 'hPa',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_05b_3e4_e44_05b3e4e44_atmospheric_pressure',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1011.0',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_05b_3e4_e44_05b3e4e44_battery_status-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        <TFAmeBatteryState.OK: 'ok'>,
        <TFAmeBatteryState.LOW: 'low'>,
        <TFAmeBatteryState.CRITICAL: 'critical'>,
        <TFAmeBatteryState.MISSING: 'missing'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.tfa_me_05b_3e4_e44_05b3e4e44_battery_status',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Battery status',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Battery status',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'lowbatt',
    'unique_id': '05b3e4e44_05b3e4e44_lowbatt',
    'unit_of_measurement': None,
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_05b_3e4_e44_05b3e4e44_battery_status-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'enum',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me 05B-3E4-E44 (05B3E4E44) Battery status',
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        <TFAmeBatteryState.OK: 'ok'>,
        <TFAmeBatteryState.LOW: 'low'>,
        <TFAmeBatteryState.CRITICAL: 'critical'>,
        <TFAmeBatteryState.MISSING: 'missing'>,
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_05b_3e4_e44_05b3e4e44_battery_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'low',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_05b_3e4_e44_05b3e4e44_humidity-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.tfa_me_05b_3e4_e44_05b3e4e44_humidity',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Humidity',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.HUMIDITY: 'humidity'>,
    'original_icon': None,
    'original_name': 'Humidity',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '05b3e4e44_05b3e4e44_humidity',
    'unit_of_measurement': '%',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_05b_3e4_e44_05b3e4e44_humidity-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'humidity',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me 05B-3E4-E44 (05B3E4E44) Humidity',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_05b_3e4_e44_05b3e4e44_humidity',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '35.0',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_05b_3e4_e44_05b3e4e44_rssi-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.tfa_me_05b_3e4_e44_05b3e4e44_rssi',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'RSSI',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'RSSI',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'rssi',
    'unique_id': '05b3e4e44_05b3e4e44_rssi',
    'unit_of_measurement': '/255',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_05b_3e4_e44_05b3e4e44_rssi-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me 05B-3E4-E44 (05B3E4E44) RSSI',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '/255',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_05b_3e4_e44_05b3e4e44_rssi',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '255',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_05b_3e4_e44_05b3e4e44_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.tfa_me_05b_3e4_e44_05b3e4e44_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Temperature',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Temperature',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '05b3e4e44_05b3e4e44_temperature',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_05b_3e4_e44_05b3e4e44_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me 05B-3E4-E44 (05B3E4E44) Temperature',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_05b_3e4_e44_05b3e4e44_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '23.8',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a1f_fff_fea_05b3e4e44_battery_status-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        <TFAmeBatteryState.OK: 'ok'>,
        <TFAmeBatteryState.LOW: 'low'>,
        <TFAmeBatteryState.CRITICAL: 'critical'>,
        <TFAmeBatteryState.MISSING: 'missing'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.tfa_me_a1f_fff_fea_05b3e4e44_battery_status',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Battery status',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Battery status',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'lowbatt',
    'unique_id': '05b3e4e44_a1fffffea_lowbatt',
    'unit_of_measurement': None,
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a1f_fff_fea_05b3e4e44_battery_status-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'enum',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me A1F-FFF-FEA (05B3E4E44) Battery status',
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        <TFAmeBatteryState.OK: 'ok'>,
        <TFAmeBatteryState.LOW: 'low'>,
        <TFAmeBatteryState.CRITICAL: 'critical'>,
        <TFAmeBatteryState.MISSING: 'missing'>,
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_a1f_fff_fea_05b3e4e44_battery_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'ok',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a1f_fff_fea_05b3e4e44_precipitation-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.tfa_me_a1f_fff_fea_05b3e4e44_precipitation',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Precipitation',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.PRECIPITATION: 'precipitation'>,
    'original_icon': None,
    'original_name': 'Precipitation',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '05b3e4e44_a1fffffea_rain',
    'unit_of_measurement': 'mm',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a1f_fff_fea_05b3e4e44_precipitation-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'precipitation',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me A1F-FFF-FEA (05B3E4E44) Precipitation',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: 'mm',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_a1f_fff_fea_05b3e4e44_precipitation',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '7.4',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a1f_fff_fea_05b3e4e44_rssi-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.tfa_me_a1f_fff_fea_05b3e4e44_rssi',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'RSSI',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'RSSI',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'rssi',
    'unique_id': '05b3e4e44_a1fffffea_rssi',
    'unit_of_measurement': '/255',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a1f_fff_fea_05b3e4e44_rssi-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me A1F-FFF-FEA (05B3E4E44) RSSI',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '/255',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_a1f_fff_fea_05b3e4e44_rssi',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '192',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a20_4e4_df6_05b3e4e44_battery_status-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        <TFAmeBatteryState.OK: 'ok'>,
        <TFAmeBatteryState.LOW: 'low'>,
        <TFAmeBatteryState.CRITICAL: 'critical'>,
        <TFAmeBatteryState.MISSING: 'missing'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.tfa_me_a20_4e4_df6_05b3e4e44_battery_status',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Battery status',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Battery status',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'lowbatt',
    'unique_id': '05b3e4e44_a204e4df6_lowbatt',
    'unit_of_measurement': None,
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a20_4e4_df6_05b3e4e44_battery_status-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'enum',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me A20-4E4-DF6 (05B3E4E44) Battery status',
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        <TFAmeBatteryState.OK: 'ok'>,
        <TFAmeBatteryState.LOW: 'low'>,
        <TFAmeBatteryState.CRITICAL: 'critical'>,
        <TFAmeBatteryState.MISSING: 'missing'>,
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_a20_4e4_df6_05b3e4e44_battery_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'ok',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a20_4e4_df6_05b3e4e44_rssi-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.tfa_me_a20_4e4_df6_05b3e4e44_rssi',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'RSSI',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'RSSI',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'rssi',
    'unique_id': '05b3e4e44_a204e4df6_rssi',
    'unit_of_measurement': '/255',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a20_4e4_df6_05b3e4e44_rssi-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me A20-4E4-DF6 (05B3E4E44) RSSI',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '/255',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_a20_4e4_df6_05b3e4e44_rssi',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '218',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a20_4e4_df6_05b3e4e44_wind_direction-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        <TFAmeWindDirection.N: 'n'>,
        <TFAmeWindDirection.NNE: 'nne'>,
        <TFAmeWindDirection.NE: 'ne'>,
        <TFAmeWindDirection.ENE: 'ene'>,
        <TFAmeWindDirection.E: 'e'>,
        <TFAmeWindDirection.ESE: 'ese'>,
        <TFAmeWindDirection.SE: 'se'>,
        <TFAmeWindDirection.SSE: 'sse'>,
        <TFAmeWindDirection.S: 's'>,
        <TFAmeWindDirection.SSW: 'ssw'>,
        <TFAmeWindDirection.SW: 'sw'>,
        <TFAmeWindDirection.WSW: 'wsw'>,
        <TFAmeWindDirection.W: 'w'>,
        <TFAmeWindDirection.WNW: 'wnw'>,
        <TFAmeWindDirection.NW: 'nw'>,
        <TFAmeWindDirection.NNW: 'nnw'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.tfa_me_a20_4e4_df6_05b3e4e44_wind_direction',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Wind direction',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Wind direction',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'wind_direction',
    'unique_id': '05b3e4e44_a204e4df6_wind_direction',
    'unit_of_measurement': None,
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a20_4e4_df6_05b3e4e44_wind_direction-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'enum',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me A20-4E4-DF6 (05B3E4E44) Wind direction',
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        <TFAmeWindDirection.N: 'n'>,
        <TFAmeWindDirection.NNE: 'nne'>,
        <TFAmeWindDirection.NE: 'ne'>,
        <TFAmeWindDirection.ENE: 'ene'>,
        <TFAmeWindDirection.E: 'e'>,
        <TFAmeWindDirection.ESE: 'ese'>,
        <TFAmeWindDirection.SE: 'se'>,
        <TFAmeWindDirection.SSE: 'sse'>,
        <TFAmeWindDirection.S: 's'>,
        <TFAmeWindDirection.SSW: 'ssw'>,
        <TFAmeWindDirection.SW: 'sw'>,
        <TFAmeWindDirection.WSW: 'wsw'>,
        <TFAmeWindDirection.W: 'w'>,
        <TFAmeWindDirection.WNW: 'wnw'>,
        <TFAmeWindDirection.NW: 'nw'>,
        <TFAmeWindDirection.NNW: 'nnw'>,
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_a20_4e4_df6_05b3e4e44_wind_direction',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 's',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a20_4e4_df6_05b3e4e44_wind_direction_degrees-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT_ANGLE: 'measurement_angle'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.tfa_me_a20_4e4_df6_05b3e4e44_wind_direction_degrees',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Wind direction (degrees)',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.WIND_DIRECTION: 'wind_direction'>,
    'original_icon': None,
    'original_name': 'Wind direction (degrees)',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'wind_direction_deg',
    'unique_id': '05b3e4e44_a204e4df6_wind_direction_deg',
    'unit_of_measurement': '°',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a20_4e4_df6_05b3e4e44_wind_direction_degrees-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'wind_direction',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me A20-4E4-DF6 (05B3E4E44) Wind direction (degrees)',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT_ANGLE: 'measurement_angle'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '°',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_a20_4e4_df6_05b3e4e44_wind_direction_degrees',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '180.0',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a20_4e4_df6_05b3e4e44_wind_gust-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.tfa_me_a20_4e4_df6_05b3e4e44_wind_gust',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Wind gust',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfSpeed.KILOMETERS_PER_HOUR: 'km/h'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.WIND_SPEED: 'wind_speed'>,
    'original_icon': None,
    'original_name': 'Wind gust',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'wind_gust',
    'unique_id': '05b3e4e44_a204e4df6_wind_gust',
    'unit_of_measurement': <UnitOfSpeed.KILOMETERS_PER_HOUR: 'km/h'>,
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a20_4e4_df6_05b3e4e44_wind_gust-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'wind_speed',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me A20-4E4-DF6 (05B3E4E44) Wind gust',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfSpeed.KILOMETERS_PER_HOUR: 'km/h'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_a20_4e4_df6_05b3e4e44_wind_gust',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a20_4e4_df6_05b3e4e44_wind_speed-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.tfa_me_a20_4e4_df6_05b3e4e44_wind_speed',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Wind speed',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfSpeed.KILOMETERS_PER_HOUR: 'km/h'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.WIND_SPEED: 'wind_speed'>,
    'original_icon': None,
    'original_name': 'Wind speed',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '05b3e4e44_a204e4df6_wind_speed',
    'unit_of_measurement': <UnitOfSpeed.KILOMETERS_PER_HOUR: 'km/h'>,
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a20_4e4_df6_05b3e4e44_wind_speed-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'wind_speed',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me A20-4E4-DF6 (05B3E4E44) Wind speed',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfSpeed.KILOMETERS_PER_HOUR: 'km/h'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_a20_4e4_df6_05b3e4e44_wind_speed',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a2f_fff_ffb_05b3e4e44_battery_status-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        <TFAmeBatteryState.OK: 'ok'>,
        <TFAmeBatteryState.LOW: 'low'>,
        <TFAmeBatteryState.CRITICAL: 'critical'>,
        <TFAmeBatteryState.MISSING: 'missing'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.tfa_me_a2f_fff_ffb_05b3e4e44_battery_status',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Battery status',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Battery status',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'lowbatt',
    'unique_id': '05b3e4e44_a2ffffffb_lowbatt',
    'unit_of_measurement': None,
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a2f_fff_ffb_05b3e4e44_battery_status-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'enum',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me A2F-FFF-FFB (05B3E4E44) Battery status',
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        <TFAmeBatteryState.OK: 'ok'>,
        <TFAmeBatteryState.LOW: 'low'>,
        <TFAmeBatteryState.CRITICAL: 'critical'>,
        <TFAmeBatteryState.MISSING: 'missing'>,
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_a2f_fff_ffb_05b3e4e44_battery_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'ok',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a2f_fff_ffb_05b3e4e44_rssi-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.tfa_me_a2f_fff_ffb_05b3e4e44_rssi',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'RSSI',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'RSSI',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'rssi',
    'unique_id': '05b3e4e44_a2ffffffb_rssi',
    'unit_of_measurement': '/255',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a2f_fff_ffb_05b3e4e44_rssi-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me A2F-FFF-FFB (05B3E4E44) RSSI',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '/255',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_a2f_fff_ffb_05b3e4e44_rssi',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '218',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a2f_fff_ffb_05b3e4e44_wind_direction-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        <TFAmeWindDirection.N: 'n'>,
        <TFAmeWindDirection.NNE: 'nne'>,
        <TFAmeWindDirection.NE: 'ne'>,
        <TFAmeWindDirection.ENE: 'ene'>,
        <TFAmeWindDirection.E: 'e'>,
        <TFAmeWindDirection.ESE: 'ese'>,
        <TFAmeWindDirection.SE: 'se'>,
        <TFAmeWindDirection.SSE: 'sse'>,
        <TFAmeWindDirection.S: 's'>,
        <TFAmeWindDirection.SSW: 'ssw'>,
        <TFAmeWindDirection.SW: 'sw'>,
        <TFAmeWindDirection.WSW: 'wsw'>,
        <TFAmeWindDirection.W: 'w'>,
        <TFAmeWindDirection.WNW: 'wnw'>,
        <TFAmeWindDirection.NW: 'nw'>,
        <TFAmeWindDirection.NNW: 'nnw'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.tfa_me_a2f_fff_ffb_05b3e4e44_wind_direction',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Wind direction',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Wind direction',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'wind_direction',
    'unique_id': '05b3e4e44_a2ffffffb_wind_direction',
    'unit_of_measurement': None,
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a2f_fff_ffb_05b3e4e44_wind_direction-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'enum',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me A2F-FFF-FFB (05B3E4E44) Wind direction',
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        <TFAmeWindDirection.N: 'n'>,
        <TFAmeWindDirection.NNE: 'nne'>,
        <TFAmeWindDirection.NE: 'ne'>,
        <TFAmeWindDirection.ENE: 'ene'>,
        <TFAmeWindDirection.E: 'e'>,
        <TFAmeWindDirection.ESE: 'ese'>,
        <TFAmeWindDirection.SE: 'se'>,
        <TFAmeWindDirection.SSE: 'sse'>,
        <TFAmeWindDirection.S: 's'>,
        <TFAmeWindDirection.SSW: 'ssw'>,
        <TFAmeWindDirection.SW: 'sw'>,
        <TFAmeWindDirection.WSW: 'wsw'>,
        <TFAmeWindDirection.W: 'w'>,
        <TFAmeWindDirection.WNW: 'wnw'>,
        <TFAmeWindDirection.NW: 'nw'>,
        <TFAmeWindDirection.NNW: 'nnw'>,
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_a2f_fff_ffb_05b3e4e44_wind_direction',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 's',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a2f_fff_ffb_05b3e4e44_wind_direction_degrees-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT_ANGLE: 'measurement_angle'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.tfa_me_a2f_fff_ffb_05b3e4e44_wind_direction_degrees',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Wind direction (degrees)',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.WIND_DIRECTION: 'wind_direction'>,
    'original_icon': None,
    'original_name': 'Wind direction (degrees)',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'wind_direction_deg',
    'unique_id': '05b3e4e44_a2ffffffb_wind_direction_deg',
    'unit_of_measurement': '°',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a2f_fff_ffb_05b3e4e44_wind_direction_degrees-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'wind_direction',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me A2F-FFF-FFB (05B3E4E44) Wind direction (degrees)',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT_ANGLE: 'measurement_angle'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '°',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_a2f_fff_ffb_05b3e4e44_wind_direction_degrees',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '180.0',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a2f_fff_ffb_05b3e4e44_wind_gust-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.tfa_me_a2f_fff_ffb_05b3e4e44_wind_gust',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Wind gust',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfSpeed.KILOMETERS_PER_HOUR: 'km/h'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.WIND_SPEED: 'wind_speed'>,
    'original_icon': None,
    'original_name': 'Wind gust',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'wind_gust',
    'unique_id': '05b3e4e44_a2ffffffb_wind_gust',
    'unit_of_measurement': <UnitOfSpeed.KILOMETERS_PER_HOUR: 'km/h'>,
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a2f_fff_ffb_05b3e4e44_wind_gust-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'wind_speed',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me A2F-FFF-FFB (05B3E4E44) Wind gust',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfSpeed.KILOMETERS_PER_HOUR: 'km/h'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_a2f_fff_ffb_05b3e4e44_wind_gust',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a2f_fff_ffb_05b3e4e44_wind_speed-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.tfa_me_a2f_fff_ffb_05b3e4e44_wind_speed',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Wind speed',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfSpeed.KILOMETERS_PER_HOUR: 'km/h'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.WIND_SPEED: 'wind_speed'>,
    'original_icon': None,
    'original_name': 'Wind speed',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '05b3e4e44_a2ffffffb_wind_speed',
    'unit_of_measurement': <UnitOfSpeed.KILOMETERS_PER_HOUR: 'km/h'>,
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a2f_fff_ffb_05b3e4e44_wind_speed-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'wind_speed',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me A2F-FFF-FFB (05B3E4E44) Wind speed',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfSpeed.KILOMETERS_PER_HOUR: 'km/h'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_a2f_fff_ffb_05b3e4e44_wind_speed',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a36_4f3_d67_05b3e4e44_battery_status-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        <TFAmeBatteryState.OK: 'ok'>,
        <TFAmeBatteryState.LOW: 'low'>,
        <TFAmeBatteryState.CRITICAL: 'critical'>,
        <TFAmeBatteryState.MISSING: 'missing'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.tfa_me_a36_4f3_d67_05b3e4e44_battery_status',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Battery status',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Battery status',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'lowbatt',
    'unique_id': '05b3e4e44_a364f3d67_lowbatt',
    'unit_of_measurement': None,
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a36_4f3_d67_05b3e4e44_battery_status-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'enum',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me A36-4F3-D67 (05B3E4E44) Battery status',
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        <TFAmeBatteryState.OK: 'ok'>,
        <TFAmeBatteryState.LOW: 'low'>,
        <TFAmeBatteryState.CRITICAL: 'critical'>,
        <TFAmeBatteryState.MISSING: 'missing'>,
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_a36_4f3_d67_05b3e4e44_battery_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'ok',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a36_4f3_d67_05b3e4e44_rssi-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.tfa_me_a36_4f3_d67_05b3e4e44_rssi',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'RSSI',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'RSSI',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'rssi',
    'unique_id': '05b3e4e44_a364f3d67_rssi',
    'unit_of_measurement': '/255',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a36_4f3_d67_05b3e4e44_rssi-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me A36-4F3-D67 (05B3E4E44) RSSI',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '/255',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_a36_4f3_d67_05b3e4e44_rssi',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '226',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a36_4f3_d67_05b3e4e44_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.tfa_me_a36_4f3_d67_05b3e4e44_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Temperature',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Temperature',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '05b3e4e44_a364f3d67_temperature',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a36_4f3_d67_05b3e4e44_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me A36-4F3-D67 (05B3E4E44) Temperature',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_a36_4f3_d67_05b3e4e44_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '23.9',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a44_812_90f_05b3e4e44_battery_status-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        <TFAmeBatteryState.OK: 'ok'>,
        <TFAmeBatteryState.LOW: 'low'>,
        <TFAmeBatteryState.CRITICAL: 'critical'>,
        <TFAmeBatteryState.MISSING: 'missing'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.tfa_me_a44_812_90f_05b3e4e44_battery_status',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Battery status',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Battery status',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'lowbatt',
    'unique_id': '05b3e4e44_a4481290f_lowbatt',
    'unit_of_measurement': None,
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a44_812_90f_05b3e4e44_battery_status-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'enum',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me A44-812-90F (05B3E4E44) Battery status',
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        <TFAmeBatteryState.OK: 'ok'>,
        <TFAmeBatteryState.LOW: 'low'>,
        <TFAmeBatteryState.CRITICAL: 'critical'>,
        <TFAmeBatteryState.MISSING: 'missing'>,
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_a44_812_90f_05b3e4e44_battery_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'ok',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a44_812_90f_05b3e4e44_humidity-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.tfa_me_a44_812_90f_05b3e4e44_humidity',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Humidity',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.HUMIDITY: 'humidity'>,
    'original_icon': None,
    'original_name': 'Humidity',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '05b3e4e44_a4481290f_humidity',
    'unit_of_measurement': '%',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a44_812_90f_05b3e4e44_humidity-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'humidity',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me A44-812-90F (05B3E4E44) Humidity',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_a44_812_90f_05b3e4e44_humidity',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '56.0',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a44_812_90f_05b3e4e44_rssi-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.tfa_me_a44_812_90f_05b3e4e44_rssi',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'RSSI',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'RSSI',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'rssi',
    'unique_id': '05b3e4e44_a4481290f_rssi',
    'unit_of_measurement': '/255',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a44_812_90f_05b3e4e44_rssi-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me A44-812-90F (05B3E4E44) RSSI',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '/255',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_a44_812_90f_05b3e4e44_rssi',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '174',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a44_812_90f_05b3e4e44_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.tfa_me_a44_812_90f_05b3e4e44_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Temperature',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Temperature',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '05b3e4e44_a4481290f_temperature',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a44_812_90f_05b3e4e44_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me A44-812-90F (05B3E4E44) Temperature',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_a44_812_90f_05b3e4e44_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '15.1',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a44_812_90f_05b3e4e44_temperature_probe-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.tfa_me_a44_812_90f_05b3e4e44_temperature_probe',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Temperature probe',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Temperature probe',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'temperature_probe',
    'unique_id': '05b3e4e44_a4481290f_temperature_probe',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a44_812_90f_05b3e4e44_temperature_probe-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me A44-812-90F (05B3E4E44) Temperature probe',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_a44_812_90f_05b3e4e44_temperature_probe',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '15.1',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a6f_169_ad1_05b3e4e44_battery_status-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        <TFAmeBatteryState.OK: 'ok'>,
        <TFAmeBatteryState.LOW: 'low'>,
        <TFAmeBatteryState.CRITICAL: 'critical'>,
        <TFAmeBatteryState.MISSING: 'missing'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.tfa_me_a6f_169_ad1_05b3e4e44_battery_status',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Battery status',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Battery status',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'lowbatt',
    'unique_id': '05b3e4e44_a6f169ad1_lowbatt',
    'unit_of_measurement': None,
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a6f_169_ad1_05b3e4e44_battery_status-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'enum',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me A6F-169-AD1 (05B3E4E44) Battery status',
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        <TFAmeBatteryState.OK: 'ok'>,
        <TFAmeBatteryState.LOW: 'low'>,
        <TFAmeBatteryState.CRITICAL: 'critical'>,
        <TFAmeBatteryState.MISSING: 'missing'>,
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_a6f_169_ad1_05b3e4e44_battery_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'low',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a6f_169_ad1_05b3e4e44_humidity-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.tfa_me_a6f_169_ad1_05b3e4e44_humidity',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Humidity',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.HUMIDITY: 'humidity'>,
    'original_icon': None,
    'original_name': 'Humidity',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '05b3e4e44_a6f169ad1_humidity',
    'unit_of_measurement': '%',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a6f_169_ad1_05b3e4e44_humidity-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'humidity',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me A6F-169-AD1 (05B3E4E44) Humidity',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_a6f_169_ad1_05b3e4e44_humidity',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '38.0',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a6f_169_ad1_05b3e4e44_rssi-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.tfa_me_a6f_169_ad1_05b3e4e44_rssi',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'RSSI',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'RSSI',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'rssi',
    'unique_id': '05b3e4e44_a6f169ad1_rssi',
    'unit_of_measurement': '/255',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a6f_169_ad1_05b3e4e44_rssi-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me A6F-169-AD1 (05B3E4E44) RSSI',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '/255',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_a6f_169_ad1_05b3e4e44_rssi',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '227',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a6f_169_ad1_05b3e4e44_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.tfa_me_a6f_169_ad1_05b3e4e44_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Temperature',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Temperature',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '05b3e4e44_a6f169ad1_temperature',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_a6f_169_ad1_05b3e4e44_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me A6F-169-AD1 (05B3E4E44) Temperature',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_a6f_169_ad1_05b3e4e44_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '23.9',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_bb1_234_567_05b3e4e44_battery_status-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        <TFAmeBatteryState.OK: 'ok'>,
        <TFAmeBatteryState.LOW: 'low'>,
        <TFAmeBatteryState.CRITICAL: 'critical'>,
        <TFAmeBatteryState.MISSING: 'missing'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.tfa_me_bb1_234_567_05b3e4e44_battery_status',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Battery status',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Battery status',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'lowbatt',
    'unique_id': '05b3e4e44_bb1234567_lowbatt',
    'unit_of_measurement': None,
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_bb1_234_567_05b3e4e44_battery_status-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'enum',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me BB1-234-567 (05B3E4E44) Battery status',
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        <TFAmeBatteryState.OK: 'ok'>,
        <TFAmeBatteryState.LOW: 'low'>,
        <TFAmeBatteryState.CRITICAL: 'critical'>,
        <TFAmeBatteryState.MISSING: 'missing'>,
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_bb1_234_567_05b3e4e44_battery_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'ok',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_bb1_234_567_05b3e4e44_precipitation-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.tfa_me_bb1_234_567_05b3e4e44_precipitation',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Precipitation',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.PRECIPITATION: 'precipitation'>,
    'original_icon': None,
    'original_name': 'Precipitation',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '05b3e4e44_bb1234567_rain',
    'unit_of_measurement': 'mm',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_bb1_234_567_05b3e4e44_precipitation-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'precipitation',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me BB1-234-567 (05B3E4E44) Precipitation',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: 'mm',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_bb1_234_567_05b3e4e44_precipitation',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '7.4',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_bb1_234_567_05b3e4e44_rssi-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.tfa_me_bb1_234_567_05b3e4e44_rssi',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'RSSI',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'RSSI',
    'platform': 'tfa_me',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'rssi',
    'unique_id': '05b3e4e44_bb1234567_rssi',
    'unit_of_measurement': '/255',
  })
# ---
# name: test_tfa_me_sensor_entities_snapshot[sensor.tfa_me_bb1_234_567_05b3e4e44_rssi-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TFA.me BB1-234-567 (05B3E4E44) RSSI',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '/255',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.tfa_me_bb1_234_567_05b3e4e44_rssi',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '192',
  })
# ---
